# fabioard-api

./: .gitignore  main.py  pyproject.toml  requirements.txt
fabioard/: config.py
fabioard/adapter/: google_calendar_provider.py  harddrive_provider.py  owm_provider.py  pcloud_provider.py  star_provider.py
fabioard/api/controllers/: bus_controller.py  calendar_controller.py  picture_controller.py  slideshow_controller.py  status_controller.py  weather_controller.py  websocket_controller.py
fabioard/api/dto/: bus_schedule_dto.py  event_dto.py  message.py  picture_dto.py  status_dto.py  weather_dto.py
fabioard/api/websocket/: websocket_manager.py
fabioard/commons/: file_utils.py
fabioard/controller/: picture_controller.py  status_controller.py
fabioard/domain/: picture_service.py  service_handler.py
fabioard/domain/business/: bus_schedule.py  event.py  picture.py  weather.py
fabioard/domain/protocol/: CloudProviderProtocol.py  WeatherProviderProtocol.py  bus_schedule_provider_protocol.py  calendar_provider_protocol.py  cloud_provider_protocol.py
fabioard/domain/services/: bus_service.py  calendar_service.py  picture_service.py  weather_service.py
static/: index.html  remote.html
static/css/: fabioard.css
static/script/: fabioard.js
