[project]
name = "fabioard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.4",
    "loguru>=0.7.2",
    "pendulum>=3.0.0",
    "pydantic-extra-types>=2.10.0",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.9.2",
    "requests>=2.32.3",
    "uvicorn>=0.32.0",
]
