[project]
name = "fabioard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.4",
    "google-api-python-client>=2.153.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "loguru>=0.7.2",
    "pendulum>=3.0.0",
    "pillow>=11.0.0",
    "pydantic-extra-types>=2.10.0",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.9.2",
    "qrcode[pil]>=8.0",
    "requests>=2.32.3",
    "uvicorn[standard]>=0.32.0",
]
